# EspMeshtasticCompact

./: .gitignore  CMakeLists.txt  README.md  idf_component.yml  library.json
components/MeshtasticCompact/: CMakeLists.txt  MeshasticCompactStructs.hpp  MeshtasticCompact.cpp  MeshtasticCompact.hpp  idf_component.yml
components/MeshtasticCompact/include/: EspHal.h
include/: EspHal.h  MeshasticCompactStructs.hpp  MeshcoreCompact.hpp  MeshcoreCompactNodeInfoDB.hpp  MeshcoreCompactStructs.hpp  MeshtasticCompact.hpp  MeshtasticCompactFileIO.hpp  MeshtasticCompactNodeInfoDB.hpp  MeshtasticCompactOutQueue.hpp  MeshtasticCompactRouter.hpp  MeshtasticCompactStructs.hpp  RadioStructs.hpp
main/: CMakeLists.txt  idf_component.yml  main.c  main.cpp  ra01s.c
src/: CMakeLists.txt  MeshcoreCompact.cpp  MeshtasticCompact.cpp  MeshtasticCompactFileIO.cpp  main.cpp
